--- a/patterns/Forms/textarea.html
+++ b/patterns/Forms/textarea.html
@@ -17,7 +17,5 @@
     <label for="details">Enter text here</label>
     <textarea id="details" name="message"></textarea>
   </div>
-</form>
-</div>
 </body>
-</head>
+</html>
