--- a/patterns/cards/image-card.html
+++ b/patterns/cards/image-card.html
@@ -4,16 +4,17 @@
   <meta charset="utf-8">
   <title>Item Card</title>
   <meta name="viewport" content="width=device-width,initial-scale=1">
-  <link href="css/modules.css" rel="stylesheet">
-  <link href="css/grid.css" rel="stylesheet">
-  <link href="css/type.css" rel="stylesheet">
-  <link href="css/main.css" rel="stylesheet">
+  <link href="./../common/modules.css" rel="stylesheet">
+  <link href="./../common/grid.css" rel="stylesheet">
+  <link href="./../common/type.css" rel="stylesheet">
+  <link href="../../common/theme.css" rel="stylesheet">
+  <link href="./../common/main.css" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Archivo+Black" rel="stylesheet">
   <link href="cards.css" rel="stylesheet">
 </head>
 <body>
-    <div class="image-container size-img">
-      <a href="#"><img class="img-flex" src="../../images/cardimage.png" alt=""></a>
-    </div>
+  <div class="image-container size-img">
+    <a href="#"><img class="img-flex" src="../../images/cardimage.png" alt=""></a>
+  </div>
 </body>
 </html>
