--- a/patterns/forms/email-input.html
+++ b/patterns/forms/email-input.html
@@ -2,7 +2,7 @@
 <html lang="en-ca">
 <head>
   <meta charset="utf-8">
-  <title>Text</title>
+  <title>email input</title>
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <link href="../../common/modules.css" rel="stylesheet">
   <link href="../../common/grid.css" rel="stylesheet">
@@ -14,12 +14,8 @@
 </head>
 <body>
   <div class="push">
-    <label for="subject">How much quantity</label>
-    <select id="subject" name="_subject">
-      <option>1</option>
-      <option>5</option>
-      <option>10</option>
-    </select>
+    <label for="email">Your email</label>
+    <input id="email" type="email" placeholder="me@me.com" name="email">
   </div>
 </body>
-</head>
+</html>
